# lexicon-lab

./: .gitignore  README.md  idea.md  pyproject.toml  test_quantifiers.sh
.sisyphus/: PROJECT_STATUS.md  boulder.json  plan.md
.sisyphus/notepads/error-handling/: README.md  before-after.md  implementation-checklist.md  learnings.md  summary.md
.sisyphus/notepads/fly-command/: learnings.md
.sisyphus/notepads/lexicon-lab/: learnings.md
.sisyphus/notepads/pickle-cache/: implementation.md  learnings.md
.sisyphus/notepads/plan/: blockers.md
data/: CHENGYUJIELONG_INTEGRATION.md  DATASET_UPGRADE.md
lexicon/: __init__.py  cli.py  index.py  models.py  pinyin_utils.py  search.py  structure.py
scripts/: fetch_chengyujielong.py  fetch_chengyujielong_stage1.py  merge_datasets.py  process_chengyujielong.py
tests/: __init__.py  test_cli.py  test_pinyin_utils.py  test_search.py  test_structure.py
